<resources>
    <string name="app_name">NavigationComponents</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="terms_and_conditions_fragment">Terms And Conditions Fragment</string>
    <string name="successfully_logged_in">Successfully logged in</string>
    <string name="okay">Okay</string>
</resources>